# minichess-AI-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  square of a number.cpp  squareroot.cpp
.github/workflows/: cmake.yml
src/: board.h  collection.h  main.cpp
src/header/: board.cpp  board.h  commandline.cpp  commandline.h  minichessAI.cpp  minichessAI.h  piece.cpp  piece.h
src/header/util/: error.cpp  error.h  util.h
src/util/: error.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  board_test.cpp  board_test.h  cmake_install.cmake  test_main.cpp  util_util_test.cpp  util_util_test.h
